--- a/CostData/report/templates/25/FL_item.html
+++ b/CostData/report/templates/25/FL_item.html
@@ -49,18 +49,37 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.78</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.942164</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.626831</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.681613</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MBH64722501</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.78</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.146002</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">204</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.552291</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">214</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733024</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.774326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.373169</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.3</td>
     </tr>
     <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">43</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
@@ -69,33 +88,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">36.36</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.579399</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">198</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.106211</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">209</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.367628</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">40.65619</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">194</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MEK64186901</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Housing,Bearing Drum</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16.02367</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.055788</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">153</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MEK64186904</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Housing,Bearing Drum</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.354728</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19.0</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.864729</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">41.108553</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
@@ -107,71 +107,71 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.323</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.579</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.408046</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">167</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.3965</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">180</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316912</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.015088</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.990364</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">372</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC76886111</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCV47136410</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Door,Glass</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">211</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MHW62441205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.44</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">22.6832</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.881047</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">86</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.526884</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">178</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC76886111</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCV47136403</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Door,Glass</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.321047</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MHW62441201</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.723565</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">20.572975</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">385</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30018842</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">267</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU64683301</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315013</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.6841</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.9</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.31386</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.70657</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">196</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74873830</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315013</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30018842</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.843721</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.52126</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">10.60657</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">385</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30018842</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">338</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.6841</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-4.0863</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">105</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30018815</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30019512</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;"></td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.945375</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">81</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.659862</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.117315</td>
     </tr>
   </tbody>
 </table>
