--- a/CostData/report/templates/29/FL_item.html
+++ b/CostData/report/templates/29/FL_item.html
@@ -48,16 +48,16 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.09</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.238938</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.78</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.146002</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733024</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.487936</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.550859</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.774326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.3</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
@@ -69,33 +69,33 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">36.36</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.679792</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">219</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.579399</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">198</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">42.039792</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.367628</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">40.65619</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">193</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA00674239</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Resin,PP</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.95</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.224</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">43</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">36.36</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.524722</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">171</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA00674203</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Resin,PP</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.303033</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.382861</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.055414</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">208</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581185</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.632372</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">38.028977</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
@@ -107,13 +107,13 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16.02367</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.134574</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">173</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.055788</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">153</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MEK64186904</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Housing,Bearing Drum</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.381199</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.354728</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19.0</td>
     </tr>
     <tr>
@@ -126,52 +126,52 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.323</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.579</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.440473</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">188</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.408046</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">167</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316912</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.084525</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.015088</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">267</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU64683301</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315013</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">211</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MHW62441205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.9</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.023338</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">204</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74873830</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315013</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">10.923338</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">23.8492</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.723494</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">164</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MHW62441201</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.220328</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">20.56548</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">339</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">372</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC76886111</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCV47136410</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Door,Glass</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.24</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.44</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.717571</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">84</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.881047</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">86</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.587648</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.018909</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC76886111</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCV47136403</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Door,Glass</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.321047</td>
     </tr>
   </tbody>
 </table>
