--- a/CostData/report/templates/17/DR_item.html
+++ b/CostData/report/templates/17/DR_item.html
@@ -48,130 +48,130 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGM30061301</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Parts Assembly,Motor</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">23.716</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">23.8</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.63377</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">119</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">122</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU39302538</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGM30061301</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Parts Assembly,Motor</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.34977</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">25.1</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">95</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3044EL0002U</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706601</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Tub,Drum(Rear Form)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">63</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU39302538</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGM30061302</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Parts Assembly,Motor</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.354</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.015926</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">111</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30983002</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GA)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">123</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU39302538</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGM30061302</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Parts Assembly,Motor</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.369926</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.4</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">228</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3044EL0001Q</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9ZZZEL2002F</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(Alcot)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.261</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.307864</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">114</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3045EL1002K</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9ZZZEL2002F</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(Alcot)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">TAV35812101</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.953136</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RV13D1AMAZU.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910309</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">14.1</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">232</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">115</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3045EL1002K</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4432EL1002F</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lifter</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.65176</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5301EL1001J</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.339899</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">25</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">138</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3045EL1002K</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4432EL1002F</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lifter</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.001567</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.765001</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5301EL1001J</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.9</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">281</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">282</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.24</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.681985</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">67</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.607459</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.117315</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.8</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">281</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">282</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.24</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-6.392583</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">127</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-6.1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">130</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RV13D1AMAZU.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396990</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.066217</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.146142</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.1</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">424</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">425</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MGJ67482001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30103410</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GI)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.369</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.9</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.382273</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.7</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">84</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MGJ67482001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30927601</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GI)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.265282</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.810004</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.8</td>
     </tr>
   </tbody>
 </table>
