--- a/CostData/report/templates/24/DR_trend.html
+++ b/CostData/report/templates/24/DR_trend.html
@@ -20,6 +20,12 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W5</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
     </tr>
   </thead>
   <tbody>
@@ -43,6 +49,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10034.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10034.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -64,6 +76,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">206.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">206.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -85,6 +103,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">220.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">220.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
     </tr>
     <tr>
       
@@ -106,6 +130,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">208.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">208.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
     </tr>
     <tr>
       
@@ -127,6 +157,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
     </tr>
     <tr>
       
@@ -148,6 +184,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -169,6 +211,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-2.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-2.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -190,6 +238,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.4</td>
     </tr>
     <tr>
       
@@ -211,6 +265,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
     </tr>
     <tr>
       
@@ -232,6 +292,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.2</td>
     </tr>
   </tbody>
 </table>
