--- a/CostData/report/templates/24/FL_trend.html
+++ b/CostData/report/templates/24/FL_trend.html
@@ -8,6 +8,12 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W5</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +25,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9318.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9318.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10444.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10444.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10444.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10444.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -28,6 +40,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">306.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">305.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">305.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">304.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">304.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">306.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">306.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">309.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">310.0</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -37,6 +55,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">337.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">337.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">333.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">333.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">333.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">333.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
     </tr>
     <tr>
       
@@ -46,6 +70,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
     </tr>
     <tr>
       
@@ -55,6 +85,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
     </tr>
     <tr>
       
@@ -64,6 +100,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -73,6 +115,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">12.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -82,6 +130,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">12.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.1</td>
     </tr>
     <tr>
       
@@ -91,6 +145,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.4</td>
     </tr>
     <tr>
       
@@ -100,6 +160,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">17.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
     </tr>
   </tbody>
 </table>
