--- a/CostData/report/templates/24/TL_item.html
+++ b/CostData/report/templates/24/TL_item.html
@@ -50,14 +50,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.7</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.629631</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">159</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.899158</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">155</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733021</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.159485</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">34.188235</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.180067</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.800485</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
@@ -66,59 +66,40 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MBH64722605</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;"></td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;"></td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-2.093668</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.267474</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.840515</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.209065</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.600872</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.590608</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">44</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283401</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA00660202</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Resin,PP</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.3411</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.379</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.506214</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">81</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74973901</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA00660202</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Resin,PP</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.3411</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.458831</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AAN76350205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base Assembly,Cabinet</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.92462</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-3.257116</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">149</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AAN76350203</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base Assembly,Cabinet</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.667504</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">62</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU64683302</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315035</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.74</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.730196</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">87</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74934004</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315035</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.470196</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">71</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">72</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
@@ -126,37 +107,56 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.702545</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">71</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735205</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.237405</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.042</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">71</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.396054</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">69</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.609818</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">68</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316911</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.245452</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.917667</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">72</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.492985</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">70</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.570015</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.042</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">73</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74774302</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MAM62948105</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base,Tub(Inner)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">14.06</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.93</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">65</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MAM64905001</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH31005201</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(STS)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16.99</td>
+    </tr>
+    <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">216</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">217</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30193109</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR86498815</td>
@@ -164,14 +164,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.3483</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.409365</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">141</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.802631</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">140</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR86498815</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">35.757664</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">35.150931</td>
     </tr>
   </tbody>
 </table>
