--- a/CostData/report/templates/24/TL_trend.html
+++ b/CostData/report/templates/24/TL_trend.html
@@ -16,6 +16,13 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W3</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
     </tr>
   </thead>
   <tbody>
@@ -35,6 +42,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8047.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8047.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8047.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -52,6 +66,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">245.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">244.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">244.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">244.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.0</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -69,6 +90,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">264.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">264.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">264.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
     </tr>
     <tr>
       
@@ -83,6 +111,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">255.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">255.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
@@ -103,6 +138,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">12.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">12.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">12.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
     </tr>
     <tr>
       
@@ -120,6 +162,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -137,6 +186,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.7</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -154,6 +210,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.8</td>
     </tr>
     <tr>
       
@@ -171,6 +234,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.9</td>
     </tr>
     <tr>
       
@@ -188,6 +258,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.7</td>
     </tr>
   </tbody>
 </table>
