--- a/CostData/report/templates/25/DR_item.html
+++ b/CostData/report/templates/25/DR_item.html
@@ -50,56 +50,75 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">23.716</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.325636</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">113</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.63377</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">119</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU39302538</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGM30061301</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Parts Assembly,Motor</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.041636</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.34977</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">115</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5301EL1001J</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">95</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3044EL0002U</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706601</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Tub,Drum(Rear Form)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.059</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.164669</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">129</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5301EL1001J</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.354</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.015926</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">111</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706001</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30983002</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GA)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.223669</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.369926</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">282</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">228</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3044EL0001Q</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9ZZZEL2002F</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(Alcot)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-4.533991</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">121</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.261</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.307864</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3045EL1002K</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9ZZZEL2002F</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(Alcot)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RV13D1AMAZU.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396990</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.393795</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.297017</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.953136</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">282</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">232</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3045EL1002K</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4432EL1002F</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lifter</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.65176</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.339899</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">25</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3045EL1002K</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4432EL1002F</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lifter</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.001567</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.765001</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">281</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
@@ -107,56 +126,37 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.956093</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">63</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.870297</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">67</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.731373</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.242742</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">298</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC72301120</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ66775102</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Frame,Door(Outer)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.91544</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.222326</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">59</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC72301120</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ66775102</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Frame,Door(Outer)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.137766</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.607459</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.117315</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">333</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">TAV35812101</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL76275766</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">281</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.8283</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.243243</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">132</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-7.03311</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">127</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RV13D1AMAZU.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL76275766</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.585057</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396990</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.066217</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.146142</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">425</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">424</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MGJ67482001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30103410</td>
@@ -164,14 +164,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.369</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.193656</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">80</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.382273</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">84</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MGJ67482001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30927601</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GI)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.13439</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.810001</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.265282</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.810004</td>
     </tr>
   </tbody>
 </table>
