--- a/CostData/report/templates/25/TL_item.html
+++ b/CostData/report/templates/25/TL_item.html
@@ -50,14 +50,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.38</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.130378</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">146</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.776713</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">155</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733021</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.592105</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.800194</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.180067</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.800485</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
@@ -69,18 +69,18 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.38</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.065314</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.676067</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.407895</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.768264</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.600872</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.590608</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AAN76350205</td>
@@ -88,18 +88,18 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.92462</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-2.191116</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">140</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-3.257116</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">149</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AAN76350203</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base Assembly,Cabinet</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.592105</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.224069</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.667504</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">70</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">72</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
@@ -107,56 +107,56 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.027445</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">60</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.609818</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">68</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316911</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.230959</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.917667</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">146</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ABQ76324223</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Case Assembly</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19.0368</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.964995</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">138</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ABQ76324223</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Case Assembly</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.071805</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">72</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.492985</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">70</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.570015</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.042</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">185</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AFG73629728</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lid Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">73</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74774302</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MAM62948105</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base,Tub(Inner)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.11</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.610642</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">137</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AFG73629728</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lid Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">14.06</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.93</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">65</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MAM64905001</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH31005201</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(STS)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">14.499358</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16.99</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">215</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">217</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30193109</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR86498815</td>
@@ -164,14 +164,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.3483</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.516157</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">131</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.802631</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">140</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR86498815</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">34.864457</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">35.150931</td>
     </tr>
   </tbody>
 </table>
