--- a/CostData/report/templates/26/FL_item.html
+++ b/CostData/report/templates/26/FL_item.html
@@ -48,9 +48,9 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.551</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.78</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.354295</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.146002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
@@ -64,12 +64,12 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">43</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581185</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">38.0385</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.962336</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">36.36</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.579399</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">198</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
@@ -80,6 +80,25 @@
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">43</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">36.36</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.055414</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">208</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581185</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.632372</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">38.028977</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">194</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
@@ -98,16 +117,16 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19.0</td>
     </tr>
     <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">206</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316906</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.323</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.529</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.579</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.5588</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.408046</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">167</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283204</td>
@@ -117,7 +136,7 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">211</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
@@ -134,25 +153,6 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.220328</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">20.56548</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">338</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.631715</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">80</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.483237</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.242742</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
