--- a/CostData/report/templates/27/DR_trend.html
+++ b/CostData/report/templates/27/DR_trend.html
@@ -23,6 +23,13 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W3</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W3</th>
     </tr>
   </thead>
   <tbody>
@@ -49,6 +56,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -73,6 +87,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">203.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.1</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -97,6 +118,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
     </tr>
     <tr>
       
@@ -121,6 +149,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
     </tr>
     <tr>
       
@@ -145,6 +180,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
     </tr>
     <tr>
       
@@ -169,6 +211,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -193,6 +242,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-2.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -217,6 +273,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
     </tr>
     <tr>
       
@@ -241,6 +304,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
     </tr>
     <tr>
       
@@ -265,6 +335,13 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.1</td>
     </tr>
   </tbody>
 </table>
