--- a/CostData/report/templates/27/FL_trend.html
+++ b/CostData/report/templates/27/FL_trend.html
@@ -15,6 +15,9 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W3</th>
     </tr>
   </thead>
   <tbody>
@@ -33,6 +36,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5375.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5375.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5375.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -49,6 +55,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">309.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">310.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">311.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.6</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -65,6 +74,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">334.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">334.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">334.0</td>
     </tr>
     <tr>
       
@@ -81,6 +93,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
     </tr>
     <tr>
       
@@ -97,6 +112,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.3</td>
     </tr>
     <tr>
       
@@ -113,6 +131,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -129,6 +150,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.2</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -145,6 +169,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.2</td>
     </tr>
     <tr>
       
@@ -161,6 +188,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.1</td>
     </tr>
     <tr>
       
@@ -177,6 +207,9 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.1</td>
     </tr>
   </tbody>
 </table>
