--- a/CostData/report/templates/28/DR_item.html
+++ b/CostData/report/templates/28/DR_item.html
@@ -50,36 +50,17 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">23.716</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.950794</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">126</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.325636</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">113</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU39302538</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGM30061301</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Parts Assembly,Motor</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.666794</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">24.041636</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">95</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3044EL0002U</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706601</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Tub,Drum(Rear Form)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.354</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.034407</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">116</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30983002</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GA)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.388407</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">115</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
@@ -88,75 +69,94 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.059</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.447512</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">141</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.164669</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">129</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AEG72910326</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5301EL1001J</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Heater Assembly</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.506512</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">12.223669</td>
     </tr>
     <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">238</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63342806</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63706701</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Tub,Drum(Front Form)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.781</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.054231</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">105</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63705901</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30983001</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GA)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.835231</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">281</td>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">282</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.24</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.792983</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">70</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.649405</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.018909</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">281</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.24</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-5.687379</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">134</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-4.533991</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">121</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RV13D1AMAZU.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396990</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.816429</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.108922</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.393795</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.297017</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">282</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.956093</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">63</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58082834</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.731373</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.242742</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">298</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC72301120</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ66775102</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Frame,Door(Outer)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.91544</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.222326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">59</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC72301120</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ66775102</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Frame,Door(Outer)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.137766</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">333</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">TAV35812101</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL76275766</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.8283</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.243243</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">132</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RV13D1AMAZU.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL76275766</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Panel Assembly,Control</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.585057</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">424</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">425</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MGJ67482001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30103410</td>
@@ -164,14 +164,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.369</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.469052</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">87</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.193656</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">80</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MGJ67482001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RSH30927601</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(GI)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.325503</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.810007</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.13439</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.810001</td>
     </tr>
   </tbody>
 </table>
