--- a/CostData/report/templates/28/DR_trend.html
+++ b/CostData/report/templates/28/DR_trend.html
@@ -19,6 +19,18 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W3</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.05 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W4</th>
     </tr>
   </thead>
   <tbody>
@@ -41,6 +53,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10034.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10034.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10034.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">14207.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8457.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8799.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -61,6 +85,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">206.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">206.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">206.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">203.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">204.1</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -81,6 +117,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">220.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">220.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">220.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">215.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">211.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">212.7</td>
     </tr>
     <tr>
       
@@ -101,6 +149,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">208.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">208.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">208.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">205.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">202.1</td>
     </tr>
     <tr>
       
@@ -121,6 +181,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.5</td>
     </tr>
     <tr>
       
@@ -141,6 +213,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -161,6 +245,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-2.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-2.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -181,6 +277,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
     </tr>
     <tr>
       
@@ -201,6 +309,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.7</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-5.3</td>
     </tr>
     <tr>
       
@@ -221,6 +341,18 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-2.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-0.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-3.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">-4.1</td>
     </tr>
   </tbody>
 </table>
