--- a/CostData/report/templates/28/FL_item.html
+++ b/CostData/report/templates/28/FL_item.html
@@ -48,35 +48,35 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.551</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.354295</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA30152660</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733024</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.774326</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.3</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">43</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581185</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">36.1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">218</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">38.0385</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.962336</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">198</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR89581146</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">43.5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.367628</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">40.65619</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
@@ -86,92 +86,92 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MEK64186901</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Housing,Bearing Drum</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16.4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16.02367</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">175</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.055788</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">153</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283001</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MEK64186904</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Housing,Bearing Drum</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.354728</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">207</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">206</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316906</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.6</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.323</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.529</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">189</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.5588</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">167</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283204</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316912</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.9</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.015088</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">268</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU64683301</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315013</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">211</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MHW62441205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">10.1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">203</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74873830</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315013</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">11.3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">23.8492</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.723494</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">164</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74874106</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MHW62441201</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Spider</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.220328</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">20.56548</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">270</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">338</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU64683301</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AHL76195104</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Rotor Assembly,Combined</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396956</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.9</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.8</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">204</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74873830</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AHL76195104</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Rotor Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">8.55</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.631715</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">80</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK58110508</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA34396999</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.483237</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.242742</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">523</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK69952903</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Cover,Rear</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">372</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC76886111</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCV47136410</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Door,Glass</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5.44</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">209</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.881047</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">86</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ADC76886111</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCV47136403</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Door,Glass</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">F3P2CYUBW.ABWEUUS</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MCK69952906</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Cover,Rear</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;"></td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.321047</td>
     </tr>
   </tbody>
 </table>
