--- a/CostData/report/templates/29/FL_trend.html
+++ b/CostData/report/templates/29/FL_trend.html
@@ -12,6 +12,11 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W2</th>
     </tr>
   </thead>
   <tbody>
@@ -27,6 +32,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10444.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10444.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8945.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5375.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5375.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -40,6 +50,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">304.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">306.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">306.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">309.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">310.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">311.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.7</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -53,6 +68,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">333.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">333.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">328.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">334.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">334.0</td>
     </tr>
     <tr>
       
@@ -66,6 +86,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">315.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">313.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">318.8</td>
     </tr>
     <tr>
       
@@ -79,6 +104,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">16.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">15.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">13.3</td>
     </tr>
     <tr>
       
@@ -92,6 +122,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.2</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -105,6 +140,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.6</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.1</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -118,6 +158,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
     </tr>
     <tr>
       
@@ -131,6 +176,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.4</td>
     </tr>
     <tr>
       
@@ -144,6 +194,11 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">5.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.1</td>
     </tr>
   </tbody>
 </table>
