--- a/CostData/report/templates/29/TL_item.html
+++ b/CostData/report/templates/29/TL_item.html
@@ -48,16 +48,16 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.38</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.629631</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">159</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.130378</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">146</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733021</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.159485</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">34.188235</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.592105</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.800194</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">2</th>
@@ -67,58 +67,39 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17.7</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.38</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-2.093668</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-1.065314</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">16</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA31733002</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Sheet,Steel(PCM)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.840515</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.209065</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.407895</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.768264</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">3</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">44</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MJT63283401</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA00660202</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Resin,PP</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.3411</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.379</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.506214</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">81</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74973901</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA00660202</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Resin,PP</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.3411</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.458831</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">17</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AAN76350205</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base Assembly,Cabinet</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">9.92462</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-2.191116</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">140</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">T1889EFHUW.ABWEUUS</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AAN76350203</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Base Assembly,Cabinet</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.592105</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.224069</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">4</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">62</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EAU64683302</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315035</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">6.74</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.730196</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">87</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJQ74934004</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AJB76315035</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Stator Assembly,Combined</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">7.470196</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">71</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">70</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
@@ -126,37 +107,56 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.702545</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">71</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735205</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.237405</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.042</td>
-    </tr>
-    <tr>
-      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">71</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">5</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RCL30735202</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.62</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.728</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Substitute</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">0.396054</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">69</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.027445</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">60</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">MDQ65478402</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">RAA35316911</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Coil,Steel(STS)</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.245452</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3.230959</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4.046</td>
     </tr>
     <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">5</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">146</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ABQ76324223</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Case Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">19.0368</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.964995</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">138</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ABQ76324223</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Case Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">18.071805</td>
+    </tr>
+    <tr>
+      <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">6</th>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">185</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">3</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AFG73629728</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lid Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">15.11</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">-0.610642</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">137</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AFG73629728</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Lid Assembly</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">14.499358</td>
+    </tr>
+    <tr>
       <th style="color:navy;background-color:#ECFFAF; border:1px solid grey; border-collapse: collapse;">7</th>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">216</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">215</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">4</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">AGL30193109</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR86498815</td>
@@ -164,14 +164,14 @@
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">33.3483</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">Price Change</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2.409365</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">141</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1.516157</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">131</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">2</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">ACQ89947230</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">EBR86498815</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">PCB Assembly,Complex</td>
       <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">1</td>
-      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">35.757664</td>
+      <td style= "background-color:white; border:1px solid grey; border-collapse: collapse;">34.864457</td>
     </tr>
   </tbody>
 </table>
