--- a/CostData/report/templates/29/TL_trend.html
+++ b/CostData/report/templates/29/TL_trend.html
@@ -20,6 +20,12 @@
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W3</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W4</th>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.06 W5</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W2</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W3</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.07 W4</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W1</th>
+      <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">23.08 W2</th>
     </tr>
   </thead>
   <tbody>
@@ -43,6 +49,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11813.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8719.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1520.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1520.0</td>
     </tr>
     <tr>
       <th style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">BOM</th>
@@ -64,6 +76,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">244.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">244.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">243.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">248.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">248.5</td>
     </tr>
     <tr>
       <th rowspan="4" style="color:navy;background-color:#EFE6FF; border:1px solid grey; border-collapse: collapse;">PAC</th>
@@ -85,6 +103,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">262.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">260.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">269.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">269.9</td>
     </tr>
     <tr>
       
@@ -106,6 +130,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">251.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">250.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">259.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">259.5</td>
     </tr>
     <tr>
       
@@ -127,6 +157,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.5</td>
     </tr>
     <tr>
       
@@ -148,6 +184,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">1.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.1</td>
     </tr>
     <tr>
       <th style="color:white;background-color:#5C00FE; border:1px solid grey; border-collapse: collapse;">BOM vs PAC</th>
@@ -169,6 +211,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.5</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.5</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">11.0</td>
     </tr>
     <tr>
       <th rowspan="3" style="color:navy;background-color:#C1FF00; border:1px solid grey; border-collapse: collapse;">NPT vs GERP</th>
@@ -190,6 +238,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.2</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.4</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">0.7</td>
     </tr>
     <tr>
       
@@ -211,6 +265,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.8</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.1</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">4.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.0</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">2.8</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">3.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.3</td>
     </tr>
     <tr>
       
@@ -232,6 +292,12 @@
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.0</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.4</td>
       <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.6</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">10.3</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">6.2</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.7</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">7.1</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">8.9</td>
+      <td style="background-color:white; border:1px solid grey; border-collapse: collapse;">9.0</td>
     </tr>
   </tbody>
 </table>
