--- a/main/templates/main_home.html
+++ b/main/templates/main_home.html
@@ -32,9 +32,9 @@
             <div class="btn-group-vertical">
                 <a href="{% url 'portfolio_url' %}" class="btn btn-primary btn-lg">Portfolio</a>
                 <a href="/admin" class="btn btn-secondary btn-lg">Admin Dashboard</a>
-                <a href="{% url 'sr_home_url' %}" class="btn btn-success btn-lg">Security Reinvent Center</a>
+                <a href="{% url 'costhome_url' %}" class="btn btn-success btn-lg">Cost Data Center</a>
                 <a href="/qualityanalysisdashboard" class="btn btn-danger btn-lg">Quality Analysis Dashboard</a>
-                <a href="{% url 'costhome_url' %}" class="btn btn-info btn-lg">Cost Data Center</a>
+                <a href="{% url 'sr_home_url' %}" class="btn btn-info btn-lg">Security Reinvent Center</a>
                 <a href="/lgsupportvideotutorial" class="btn btn-warning btn-lg">LG Support Video Tutorial</a>
             </div>
         </div>
