--- a/user/templates/account.html
+++ b/user/templates/account.html
@@ -1,7 +1,7 @@
 <div class="account-background">
     {% load static %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/account2.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/account.css' %}"> 
     <div class="register-login">
         <div class="register">
             <h1>Sign Up</h1>
